tests/test73.rael.exp
Error [2:15]: Expected number
| log :array at "string"
|               ^
